chore(sonar): Made small adjustments for sonar