@@ -9,7 +9,6 @@ import com.dinetime.ranking.ports.output.ILeaderboardRepository;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class StoreLeaderboardUseCase {
@@ -39,7 +38,7 @@ public class StoreLeaderboardUseCase {
     private List<LeaderboardItem> convertToDomain(List<LeaderboardsRequestModel.LeaderboardEntry> entries) {
         return entries.stream()
                 .map(entry -> new LeaderboardItem(entry.getMealId(), entry.getTotalScore()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
 
